--- a/Project/Uppgift 0.ipynb
+++ b/Project/Uppgift 0.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "4  AND      Andorra                   NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +310,8 @@
        "      <th>Sport</th>\n",
        "      <th>Event</th>\n",
        "      <th>Medal</th>\n",
-       "      <th>region</th>\n",
-       "      <th>notes</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -434,7 +434,7 @@
        "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
        "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
        "\n",
-       "                              Event Medal       region notes  \n",
+       "                              Event Medal       Region Notes  \n",
        "0       Basketball Men's Basketball   NaN        China   NaN  \n",
        "1      Judo Men's Extra-Lightweight   NaN        China   NaN  \n",
        "2           Football Men's Football   NaN      Denmark   NaN  \n",
@@ -442,14 +442,14 @@
        "4  Speed Skating Women's 500 metres   NaN  Netherlands   NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# merge both the files\n",
-    "df_merge = df.merge(df1, on=\"NOC\",how = \"left\")\n",
+    "df_merge = df.merge(df1, on=\"NOC\",how = \"left\").rename(columns={\"region\":\"Region\",\"notes\":\"Notes\"})\n",
     "df_merge.head()"
    ]
   },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -635,8 +635,8 @@
        "      <th>Sport</th>\n",
        "      <th>Event</th>\n",
        "      <th>Medal</th>\n",
-       "      <th>region</th>\n",
-       "      <th>notes</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -680,106 +680,37 @@
        "      <td>China</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Gunnar Nielsen Aaby</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1920 Summer</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Antwerpen</td>\n",
-       "      <td>Football</td>\n",
-       "      <td>Football Men's Football</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Edgar Lindenau Aabye</td>\n",
-       "      <td>M</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Denmark/Sweden</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1900 Summer</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>Tug-Of-War</td>\n",
-       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Christine Jacoba Aaftink</td>\n",
-       "      <td>F</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>NED</td>\n",
-       "      <td>1988 Winter</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>Speed Skating</td>\n",
-       "      <td>Speed Skating Women's 500 metres</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID                      Name Sex   Age  Height  Weight            Team  \\\n",
-       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
-       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
-       "2   3       Gunnar Nielsen Aaby   M  24.0     0.0     0.0         Denmark   \n",
-       "3   4      Edgar Lindenau Aabye   M  34.0     0.0     0.0  Denmark/Sweden   \n",
-       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
+       "   ID       Name Sex   Age  Height  Weight   Team  NOC        Games  Year  \\\n",
+       "0   1  A Dijiang   M  24.0   180.0    80.0  China  CHN  1992 Summer  1992   \n",
+       "1   2   A Lamusi   M  23.0   170.0    60.0  China  CHN  2012 Summer  2012   \n",
        "\n",
-       "   NOC        Games  Year  Season       City          Sport  \\\n",
-       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
-       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
-       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
-       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
-       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
+       "   Season       City       Sport                         Event Medal Region  \\\n",
+       "0  Summer  Barcelona  Basketball   Basketball Men's Basketball     0  China   \n",
+       "1  Summer     London        Judo  Judo Men's Extra-Lightweight     0  China   \n",
        "\n",
-       "                              Event Medal       region notes  \n",
-       "0       Basketball Men's Basketball     0        China     0  \n",
-       "1      Judo Men's Extra-Lightweight     0        China     0  \n",
-       "2           Football Men's Football     0      Denmark     0  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold      Denmark     0  \n",
-       "4  Speed Skating Women's 500 metres     0  Netherlands     0  "
+       "  Notes  \n",
+       "0     0  \n",
+       "1     0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = df_merge.fillna(0)\n",
-    "df1.head()"
+    "df1 = df_merge.fillna(0) # to find average value-mean\n",
+    "df1.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +761,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +834,7 @@
        "(74522, 196594)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1057,8 +988,8 @@
        "      <th>Sport</th>\n",
        "      <th>Event</th>\n",
        "      <th>Medal</th>\n",
-       "      <th>region</th>\n",
-       "      <th>notes</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Notes</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sex</th>\n",
@@ -1129,13 +1060,13 @@
        "F     74522   74522   74098   67378   66771   74522   74522   74522   74522   \n",
        "M    196594  196594  187544  143567  141470  196594  196594  196594  196594   \n",
        "\n",
-       "     Season    City   Sport   Event  Medal  region  notes  \n",
+       "     Season    City   Sport   Event  Medal  Region  Notes  \n",
        "Sex                                                        \n",
        "F     74522   74522   74522   74522  11253   74386    901  \n",
        "M    196594  196594  196594  196594  28530  196360   4138  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1090,7 @@
        "Name: ID, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1110,7 @@
        "Text(0.5, 1.0, 'The total male and female athlets in Olympics')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1210,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1249,8 +1180,8 @@
        "      <th>Sport</th>\n",
        "      <th>Event</th>\n",
        "      <th>Medal</th>\n",
-       "      <th>region</th>\n",
-       "      <th>notes</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1303,16 +1234,16 @@
        "0   1  A Dijiang   M  24.0   180.0    80.0  China  CHN  1992 Summer  1992   \n",
        "1   2   A Lamusi   M  23.0   170.0    60.0  China  CHN  2012 Summer  2012   \n",
        "\n",
-       "   Season       City       Sport                         Event Medal region  \\\n",
+       "   Season       City       Sport                         Event Medal Region  \\\n",
        "0  Summer  Barcelona  Basketball   Basketball Men's Basketball   NaN  China   \n",
        "1  Summer     London        Judo  Judo Men's Extra-Lightweight   NaN  China   \n",
        "\n",
-       "  notes  \n",
+       "  Notes  \n",
        "0   NaN  \n",
        "1   NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,106 +1254,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.get_dummies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Medal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>USA</td>\n",
-       "      <td>18853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>15883</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>France</td>\n",
-       "      <td>12758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>UK</td>\n",
-       "      <td>12256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>11692</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Italy</td>\n",
-       "      <td>10715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>9734</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Japan</td>\n",
-       "      <td>8444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>8339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>7724</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       index  Medal\n",
-       "0        USA  18853\n",
-       "1    Germany  15883\n",
-       "2     France  12758\n",
-       "3         UK  12256\n",
-       "4     Russia  11692\n",
-       "5      Italy  10715\n",
-       "6     Canada   9734\n",
-       "7      Japan   8444\n",
-       "8     Sweden   8339\n",
-       "9  Australia   7724"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'region'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_medals \u001b[39m=\u001b[39m df_merge\u001b[39m.\u001b[39;49mregion\u001b[39m.\u001b[39mvalue_counts()\u001b[39m.\u001b[39mreset_index(name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMedal\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m)\n\u001b[0;32m      2\u001b[0m df_medals\n",
+      "File \u001b[1;32mc:\\Users\\vinee\\.virtualenvs\\Databehandling-Vineela-Nedunuri-LgAYhuxz\\lib\\site-packages\\pandas\\core\\generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5900\u001b[0m ):\n\u001b[0;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'region'"
+     ]
     }
    ],
    "source": [
@@ -1432,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2577,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2786,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2886,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
