update to pull from main

--- a/Notes/jonas_uppgift_2.ipynb
+++ b/Notes/jonas_uppgift_2.ipynb
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
        "3978  Silver    Italy   NaN  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,15 +2300,6 @@
    "source": [
     "relay = xcs_usable_dataframe[xcs_usable_dataframe[\"Sport\"] == \"Cross Country Skiing\"]\n",
     "relay.head(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relay = "
    ]
   },
   {
@@ -2399,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2481,7 @@
        "8     Switzerland      1"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2501,23 +2492,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 57 entries, 3940 to 220266\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Sex     57 non-null     object\n",
+      " 1   Team    57 non-null     object\n",
+      " 2   NOC     57 non-null     object\n",
+      " 3   Games   57 non-null     object\n",
+      " 4   Year    57 non-null     int64 \n",
+      " 5   Season  57 non-null     object\n",
+      " 6   City    57 non-null     object\n",
+      " 7   Sport   57 non-null     object\n",
+      " 8   Event   57 non-null     object\n",
+      " 9   Medal   57 non-null     object\n",
+      " 10  region  57 non-null     object\n",
+      " 11  notes   0 non-null      object\n",
+      "dtypes: int64(1), object(11)\n",
+      "memory usage: 5.8+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "relay.info()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cross Country Skiing Men's 4 x 10 kilometres Relay"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -2647,13 +2664,13 @@
        "[10598 rows x 4 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_relay = df.groupby([\"Event\", \"region\"])[[\"Medal\"]].value_counts().to_frame().reset_index().drop_duplicates()\n",
+    "df_relay = df.groupby([\"Event\", \"region\"])[[\"Medal\"]].value_counts().to_frame().reset_index()\n",
     "df_relay"
    ]
   },
@@ -3025,90 +3042,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>region</th>\n",
-       "      <th>Medal</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>763</th>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Bronze</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>764</th>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Silver</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765</th>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>766</th>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "      <td>Bulgaria</td>\n",
-       "      <td>Bronze</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>767</th>\n",
-       "      <td>Cross Country Skiing</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Silver</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    Sport    region   Medal  0\n",
-       "763  Cross Country Skiing   Austria  Bronze  2\n",
-       "764  Cross Country Skiing   Austria  Silver  2\n",
-       "765  Cross Country Skiing   Austria    Gold  1\n",
-       "766  Cross Country Skiing  Bulgaria  Bronze  1\n",
-       "767  Cross Country Skiing    Canada  Silver  2"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_relay2 = df_relay[df_relay[\"Sport\"] == \"Cross Country Skiing\"]\n",
     "df_relay2.head()"
