team medals working, creating clean ipynb

--- a/Notes/jonas_uppgift_2.ipynb
+++ b/Notes/jonas_uppgift_2.ipynb
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
        "5423  Silver   Norway   NaN  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2652,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -3628,7 +3628,7 @@
     "import plotly_express as px\n",
     "\n",
     "fig = px.bar(\n",
-    "    sport_test,\n",
+    "    df_test,\n",
     "    x=\"region\",\n",
     "    y=0,\n",
     "    color=\"Medal\",\n",
