men's team sprint complete

--- a/Notes/jonas_uppgift_2_clean.ipynb
+++ b/Notes/jonas_uppgift_2_clean.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strategi:\n",
+    "\n",
+    "Skapa en till visualisering med en lagsport. Slå ihop dem två DataFramesen och skapa en graf utav dem.\n",
+    "Efteråt är det enbart att använda samma praxis på dem resterande lagsporterna.\n",
+    "\n",
+    "TODO: Slå ihop dataframes med individuella "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1123,6 +1135,137 @@
    ],
    "source": [
     "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "### Dataframe for \"Cross Country Skiing Men's Team Sprint\"\n",
+    "* sorted medals\n",
+    "* ready to visualize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Event</th>\n",
+       "      <th>region</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Bronze</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cross Country Skiing Men's Team Sprint</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Event   region   Medal  0\n",
+       "0  Cross Country Skiing Men's Team Sprint  Finland    Gold  1\n",
+       "1  Cross Country Skiing Men's Team Sprint  Germany  Silver  1\n",
+       "2  Cross Country Skiing Men's Team Sprint   Norway    Gold  1\n",
+       "3  Cross Country Skiing Men's Team Sprint   Norway  Silver  1\n",
+       "4  Cross Country Skiing Men's Team Sprint   Russia  Bronze  2\n",
+       "5  Cross Country Skiing Men's Team Sprint   Russia  Silver  1\n",
+       "6  Cross Country Skiing Men's Team Sprint   Sweden  Bronze  1\n",
+       "7  Cross Country Skiing Men's Team Sprint   Sweden    Gold  1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# interestingly, it seems like data for 2018 and 2022 is missing\n",
+    "# dataframe\n",
+    "temp_df = xcs_df[xcs_df[\"Event\"] == \"Cross Country Skiing Men's Team Sprint\"]\n",
+    "men_team_sprint = temp_df.drop(columns=['ID','Name', 'Age', 'Height','Weight']).dropna(subset='Medal').drop_duplicates()\n",
+    "men_team_sprint\n",
+    "\n",
+    "df_team_sprint_analyzed = men_team_sprint.groupby([\"Event\", \"region\"])[[\"Medal\"]].value_counts().to_frame().reset_index()\n",
+    "df_team_sprint_analyzed\n"
    ]
   }
  ],
