--- a/Notes/jonas_uppgift_2_clean.ipynb
+++ b/Notes/jonas_uppgift_2_clean.ipynb
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
          }
         },
         "title": {
-         "text": "blablabla"
+         "text": "Men XCS team events"
         },
         "xaxis": {
          "anchor": "y",
@@ -2573,7 +2573,7 @@
     "    y=0,\n",
     "    color=\"Medal\",\n",
     "    labels={\"Sport\": \"Sport\", \"0\": \"Number of medals\"},\n",
-    "    title=\"blablabla\",\n",
+    "    title=\"Men XCS team events\",\n",
     ")\n",
     "fig.show()"
    ]
@@ -2582,7 +2582,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Women team sports: \n",
+    "___\n",
+    "## Women team sports: \n",
     "* Cross Country Skiing Women's 3 x 5 kilometres Relay\n",
     "* Cross Country Skiing Women's 4 x 5 kilometres Relay\n",
     "* Cross Country Skiing Women's Team Sprint"
