sport graph function added

--- a/Notes/Uppgift 2.ipynb
+++ b/Notes/Uppgift 2.ipynb
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -973,6 +973,7 @@
          "orientation": "v",
          "showlegend": true,
          "textposition": "auto",
+         "texttemplate": "%{y}",
          "type": "bar",
          "x": [
           "Argentina",
@@ -1040,6 +1041,7 @@
          "orientation": "v",
          "showlegend": true,
          "textposition": "auto",
+         "texttemplate": "%{y}",
          "type": "bar",
          "x": [
           "Argentina",
@@ -1103,6 +1105,7 @@
          "orientation": "v",
          "showlegend": true,
          "textposition": "auto",
+         "texttemplate": "%{y}",
          "type": "bar",
          "x": [
           "Belgium",
@@ -2011,8 +2014,8 @@
    "source": [
     "import plotly.express as px\n",
     "fig = px.bar(sport, x=\"region\",\n",
-    "    y=0,color =\"Medal\",\n",
-    "    #log_y = True,\n",
+    "    y=0,color =\"Medal\", text_auto=True,\n",
+    "    #barmode= \"group\",\n",
     "    labels={\"Sport\": \"Sport\", \"0\": \"Number of medals\"}, title= \"Countries who won medals on Football\")\n",
     "fig.show()\n"
    ]
@@ -3760,6 +3763,61 @@
      "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "female = Event[(Event['Event'] == 'F')]\n",
+    "male = Event[(Event['Event'] == 'Football Men's Football')]\n",
+    "female\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Year, Sport, Event, region]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
