commited on wrong branch, fix now

--- a/Notes/jonas_uppgift_2_clean.ipynb
+++ b/Notes/jonas_uppgift_2_clean.ipynb
@@ -7145,7 +7145,8 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## testing stuff"
+    "## testing stuff\n",
+    "* tried to sort the medals in a different way. It works!"
    ]
   },
   {
@@ -7286,6 +7287,7 @@
     }
    ],
    "source": [
+    "# using this to rename column '0' to 'Amount'\n",
     "df_10 = total_medals_without_team_sports.rename({0:'Amount'}, axis=1)\n",
     "df_10"
    ]
@@ -7428,6 +7430,7 @@
     }
    ],
    "source": [
+    "# using this to sort medals Bronze -> Silver -> Gold\n",
     "df_10.Medal=pd.Categorical(df_10.Medal,categories=['Bronze', 'Silver', 'Gold'])\n",
     "df_10 = df_10.sort_values('Medal')\n",
     "df_10"
