saved the group project

--- a/Notes/jonas_uppgift_2_even_cleaner.ipynb
+++ b/Notes/jonas_uppgift_2_even_cleaner.ipynb
@@ -1703,7 +1703,7 @@
    "outputs": [],
    "source": [
     "#TODO: Create all 3 plots\n",
-    "#TODO: subplots with px 3x1\n",
+    "#TODO: subplots with px 3x1. Visa enbart länder med \n",
     "#TODO: Live adjustable subplot-width?"
    ]
   }
